# Gauntlet

./: .env.example  .gitignore  .railway.env.example  Dockerfile  README.md  dev.ps1  docker-compose.yml  manage.py  pyproject.toml  railway.toml  render.yaml  start_stack.ps1  stop_stack.ps1
apps/core/: admin.py  models.py
apps/core/migrations/: 0001_initial.py  0002_tenant_name.py
apps/evals/: models.py  router.py  schemas.py
apps/evals/adapters/: anthropic.py  base.py  gemini.py  openai.py
apps/evals/migrations/: 0001_initial.py
apps/evals/prompts/: judge_regression.txt  judge_score.txt
apps/evals/scoring/: exact_match.py  llm_judge.py  regression.py  rubric.py
apps/evals/tasks/: dispatch.py  run_model.py  score.py
apps/evidence/: admin.py  models.py  router.py  schemas.py
apps/evidence/adapters/: anthropic.py  base.py
apps/evidence/migrations/: 0001_initial.py  0002_add_claim_type_choices.py  0003_add_error_types.py  0005_answer_record.py  0006_alter_answerrecord_id.py
apps/evidence/prompts/: claim_extractor.txt  conflict_judge.txt  question_answerer.txt
apps/evidence/scoring/: conflict_judge.py  faithfulness.py  question_answerer.py  reward_voting.py
apps/evidence/tasks/: __init__.py  answer_questions.py  build_graph.py  dispatch.py  extract_claims.py
apps/evidence/utils/: dataset_loader.py  pdf_parser.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
docs/: AI_LOG.md  architecture.md  benchmark_results_v2.jsonl  deployment.md  deployment_free.md  interview_prep.md
frontend/: .env.local  index.html  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ApiStatus.jsx  ConfidenceBar.jsx  ConflictBadge.jsx  DeltaBadge.jsx  ErrorState.jsx  Layout.jsx  LoadingState.jsx  MockBanner.jsx  ModelCompare.jsx  ProgressBar.jsx  ProtectedRoute.jsx  ScoreBar.jsx  Sidebar.jsx  StatusBadge.jsx
frontend/src/data/: mockData.js
frontend/src/hooks/: useApi.js  useAuth.js
frontend/src/pages/: Cases.jsx  Chat.jsx  Conflicts.jsx  JobList.jsx  JobStatus.jsx  Jobs.jsx  Login.jsx  NewJob.jsx  NewRun.jsx  Papers.jsx  Results.jsx  RunStatus.jsx  Runs.jsx  Suites.jsx
scripts/: benchmark.py  download_datasets.py  first_run.py  preflight.py  seed.py  smoke_test.py
scripts/test_data/: answer_generation_outputs.jsonl  conflict_pairs_ground_truth.jsonl  evidence_audit_outputs.jsonl
tests/: conftest.py
tests/evidence/: conftest.py  test_api.py  test_models.py  test_scoring.py
