# llm_eval_harness/pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-eval-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "django-ninja>=1.2.0",
    "django-tenants>=3.6.1",
    "psycopg[binary]>=3.1",
    "dj-database-url>=2.1.0",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "boto3>=1.34",
    "anthropic>=0.28",
    "openai>=1.30",
    "google-generativeai>=0.7",
    "python-dotenv>=1.0",
    "django-celery-results>=2.5",
    "django-celery-beat>=2.6",
    "uvicorn[standard]>=0.29",
    "gunicorn>=22.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-celery>=1.0",
    "factory-boy>=3.3",
    "coverage>=7.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "django-stubs>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "config", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
django_settings_module = "config.settings"
plugins = ["mypy_django_plugin.main"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]