# llm_eval_harness/pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evidence-trace"
version = "0.1.0"
description = "Biomedical paper claim conflict detection with RL reward scoring"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "django-ninja>=1.2.0",
    "django-tenants>=3.6.1",
    "psycopg[binary]>=3.1",
    "dj-database-url>=2.1.0",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "boto3>=1.34",
    "anthropic>=0.28",
    "openai>=1.30",
    "google-generativeai>=0.7",
    "python-dotenv>=1.0",
    "django-celery-results>=2.5",
    "django-celery-beat>=2.6",
    "uvicorn[standard]>=0.29",
    "gunicorn>=22.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "tenacity>=8.3",
    "django-cors-headers>=4.3.0",
    "pdfplumber>=0.11.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "datasets>=5.0.0",
    "huggingface-hub>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-celery>=1.0",
    "factory-boy>=3.3",
    "coverage>=7.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "django-stubs>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "config", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
django_settings_module = "config.settings"
plugins = ["mypy_django_plugin.main"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "django_db: marks tests that require database access",
]
